# realsense

./: .bash_aliases  .bash_aliases~  .bashrc_ros_common  .cproject  .gitignore  .gitmodules  .project  .rosconsole.config  Dockerfile  VideoBaseController.py  boostrap-dev.sh  boostrap-dev.sh~  circle.yml  mfp-ros.conf  set-affinity.sh  setup.bash  start-mfp-ros.sh  test.txt
brain/src/brain_msgs/: .cproject  CMakeLists.txt  package.xml
brain/src/brain_stem/: .cproject  CMakeLists.txt  package.xml
brain/src/brain_stem/include/: Helper.h  IO.h  MessageProcessor.h  Messages.h  SerialIO.h
brain/src/brain_stem/launch/: brain_stem.launch  brain_stem_sim.launch
brain/src/brain_stem/src/: BrainStem.cpp  BrainStemSimulator.cpp  Helper.cpp  HidIO.cpp  MessageProcessor.cpp  SerialIO.cpp
brain/src/brain_stem/test/: HidIO_test.cpp  MessageProcessor_test.cpp  SerialIO_test.cpp
brain/src/position_estimator/: .cproject  CMakeLists.txt  package.xml
brain/src/position_estimator/launch/: position_estimator.launch
brain/src/position_estimator/src/: Configuration.hpp  PEState.hpp  PositionEstimator.cpp  PositionEstimator.hpp  Robot.cpp  Robot.hpp  VelCmd.hpp  position_estimator_node.cpp
brain/src/position_estimator/test/: UnscentedKalmanFilterTest.cpp
brain/src/video/: CMakeLists.txt  package.xml
brain/src/video/launch/: video.launch
brain/src/video/scripts/: BaseController.py
ohps/src/ohps/: CMakeLists.txt  ImageSubscriber.cpp  ImageSubscriber.hpp  PoseEstimator-old.cpp  PoseEstimator.cpp  PoseEstimator.hpp  ohps.cpp  package.xml
polyclipping/: CMakeLists.txt  package.xml
srs_chuck/src/polyclipping/: CMakeLists.txt
srs_chuck/src/srsbot_chuck/: .cproject  CMakeLists.txt  package.xml
srs_chuck/src/srsbot_chuck/launch/: amcl.launch  gmapping.launch  gmapping_slam.launch  hector_slam.launch  hector_slam_sensors.launch  joystick.launch  map.launch  odom.launch  odometry.launch  robot-amcl.launch  robot.launch  rtab.launch  rtab_mapping.launch  sensors.launch
srs_chuck/src/srsbot_chuck/rviz/: config.rviz  urdf.rviz
srs_chuck/src/srsbot_chuck/scripts/: bashrc_ros_common
srs_chuck/src/srsbot_chuck/urdf/: chuck.urdf  chuck.urdf.xacro  properties.template  properties.xacro
srs_chuck/src/srsdrv_brain_stem/: package.xml
srs_chuck/src/srsdrv_brain_stem/src/: MessageProcessor.cpp
srs_chuck/src/srsdrv_brainstem/: .cproject  CMakeLists.txt
srs_chuck/src/srsdrv_brainstem/cfg/: RobotSetup.cfg
srs_chuck/src/srsdrv_brainstem/include/: BrainStem.h  BrainStemMessageProcessor.h  BrainStemMessages.h  HidIO.h  MessageProcessor.h  SerialIO.h
srs_chuck/src/srsdrv_brainstem/launch/: driver.launch
srs_chuck/src/srsdrv_brainstem/src/: BrainStem.cpp  BrainStemEmulator.cpp  BrainStemMessageProcessor.cpp  MessageProcessor.cpp  SerialIO.cpp  brainstem_node.cpp
srs_chuck/src/srsdrv_brainstem/test/: BrainStemSerialIO_test.cpp  Test_HardwareInfoMsg.cpp  Test_MessageProcessor.cpp  Test_PowerStateMsg.cpp  Test_RawOdometryMsg.cpp  Test_SensorFrameMsg.cpp
srs_chuck/src/srsdrv_realsense/: CMakeLists.txt  package.xml
srs_chuck/src/srsdrv_realsense/include/: RealsenseDriver.h
srs_chuck/src/srsdrv_realsense/launch/: driver.launch  node.launch
srs_chuck/src/srsdrv_realsense/src/: RealsenseDriver.cpp  realsense_driver.cpp
srs_chuck/src/srsdrv_stargazer/: .cproject  .project  CMakeLists.txt  package.xml
srs_chuck/src/srsdrv_stargazer/data/: anchor-test-data.yaml  anchors.yaml  robot-config-1.yaml  robot-config-2.yaml  robot-config-3.yaml  robot-config-4.yaml  robot-config.yaml
srs_chuck/src/srsdrv_stargazer/include/: StarGazer.h  StarGazerDriver.h  StarGazerDriver.hpp  StarGazerMessage.h  StarGazerMessageProcessor.h  StarGazerPointTransformer.h  StarGazerSerialIO.h  Stargazer.hpp
srs_chuck/src/srsdrv_stargazer/launch/: driver.launch
srs_chuck/src/srsdrv_stargazer/src/: Main.cpp  StarGazer.cpp  StarGazerDriver.cpp  StarGazerFilter.cpp  (+5 more)
srs_chuck/src/srslib_framework/: .cproject  .project  CMakeLists.txt  package.xml
srs_chuck/src/srslib_rviz_plugins/: .cproject  CMakeLists.txt  package.xml  srslib_rviz_plugins.xml
srs_chuck/src/srslib_test/: .cproject  CMakeLists.txt
srs_chuck/src/srslib_timing/: CMakeLists.txt  package.xml
srs_chuck/src/srsnode_brain_stem/: .cproject  CMakeLists.txt  package.xml
srs_chuck/src/srsnode_executive/: .cproject  .project  CMakeLists.txt  package.xml
srsbot_chuck/: .cproject  .project  CMakeLists.txt  package.xml
srsbot_chuck/launch/: amcl.launch  gmapping.launch  map.launch  odom.launch  odometry.launch  rtab.launch  rtab_mapping.launch  sensors.launch  static_tfs.launch
srsbot_chuck/rviz/: config.rviz
srsbot_chuck/scripts/: bash_aliases  bashrc_ros_common  build.sh  build_all.sh  build_env.sh  build_install.sh  build_instructions.txt  build_release.sh  build_unit_tests.sh  build_workspace.sh  deploy_artifact.sh  rosconsole.config  run_unit_tests.sh  unit_test_results.sh
srsbot_chuck/urdf/: chuck.urdf.xacro  urdf.sh
srsbot_chuck/urdf/common/: inertia.xacro
srsbot_chuck/urdf/component/: caster.urdf.xacro  wheel.urdf.xacro
srsbot_chuck/urdf/sensors/: r200.urdf.xacro
srslib_rviz_plugins/: .project  CMakeLists.txt  package.xml
srslib_rviz_plugins/src/logical_map/: AreaLayerDisplay.cpp  AreaLayerDisplay.hpp  LogicalMapDisplay.cpp  LogicalMapDisplay.hpp  PixelLayerDisplay.cpp  PixelLayerDisplay.hpp
srsnode_laser_filters/: CMakeLists.txt  package.xml
srsnode_laser_filters/config/: laser_filter.yaml
srsnode_laser_filters/launch/: driver.launch
srsnode_localization/: .cproject  CMakeLists.txt  package.xml
srsnode_localization/configuration_files/: chuck.lua  chuck_live.lua  chuck_live.rviz  karto_params.yaml
srsnode_localization/launch/: amcl.launch  cartographer_from_bag.launch  cartographer_live.launch  cartographer_offline.launch  chuck_bag_file.launch  gmapping.launch  hector_mapping.launch  karto_from_bag.launch  karto_live.launch
srsnode_realsense_to_laserscan/: CMakeLists.txt  package.xml
srsnode_realsense_to_laserscan/include/: RealsenseDriver.h
srsnode_realsense_to_laserscan/launch/: driver.launch
(+1987 files in other folders)
