<?xml version="1.0"?>
<!-- 
  *
  * (c) Copyright 2015-2016 River Systems, all rights reserved.
  *
  * This is proprietary software, unauthorized distribution is not permitted.
  *
-->

<package>
    <name>srslib_rviz_plugins</name>
    <version>1.0.0</version>
    <description>Library package: RVIZ</description>
    
    <author email="fsantini@6river.com">Fabrizio Santini</author>
    <maintainer email="fsantini@6river.com">Fabrizio Santini</maintainer>

    <license>Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>nav_msgs</build_depend>
    <run_depend>nav_msgs</run_depend>

    <build_depend>pluginlib</build_depend>
    <run_depend>pluginlib</run_depend>

    <build_depend>srslib_framework</build_depend>
    <run_depend>srslib_framework</run_depend>

    <build_depend>qtbase5-dev</build_depend>
    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>

    <build_depend>rviz</build_depend>
    <run_depend>rviz</run_depend>

    <export>
        <rviz plugin="${prefix}/srslib_rviz_plugins.xml"/>
    </export>

    <test_depend>rosunit</test_depend>
    <test_depend>srslib_test</test_depend>
</package>