<?xml version="1.0"?>
<!-- 
  *
  * (c) Copyright 2015-2016 River Systems, all rights reserved.
  *
  * This is proprietary software, unauthorized distribution is not permitted.
  *
-->

<package>
    <name>srsnode_localization</name>
    <version>1.0.0</version>
    <description>Node package: Localization</description>
    
    <author email="dan@6river.com">Dan Winkler</author>
    <maintainer email="dan@6river.com">Dan Winkler</maintainer>

    <license>Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>srslib_framework</build_depend>
    <run_depend>srslib_framework</run_depend>

    <test_depend>rosunit</test_depend>
    <test_depend>srslib_test</test_depend>
</package>
