<?xml version="1.0"?>
<!-- 
  *
  * (c) Copyright 2015-2016 River Systems, all rights reserved.
  *
  * This is proprietary software, unauthorized distribution is not permitted.
  *
-->

<package>
    <name>srsnode_realsense_to_laserscan</name>
    <version>1.0.0</version>
    <description>Node package: Realsense</description>

    <author email="dan@6river.com">Dan Winkler</author>
    <maintainer email="dan@6river.com">Dan Winkler</maintainer>

    <license>Proprietary</license>
    <build_depend>nodelet</build_depend>
    <run_depend>nodelet</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>opencv</buildtool_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
