<?xml version="1.0"?>
<package>
    <name>brain_msgs</name>
    <version>0.0.1</version>
    <description>The common brain message definitions</description>
    <maintainer email="fsantini@6river.com">fsantini</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
</package>
