<?xml version="1.0"?>
<package>
    <name>position_estimator</name>
    <version>0.0.1</version>
    <description>The Position Estimator package</description>
    <maintainer email="fsantini@6river.com">fsantini</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
 
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
    
    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>

    <build_depend>nav_msgs</build_depend>
    <run_depend>nav_msgs</run_depend>

    <test_depend>rosunit</test_depend>
</package>
