<?xml version="1.0"?>
<package>
    <name>video</name>
    <version>0.1.0</version>
    <description>The video package</description>

    <maintainer email="fsantini@6river.com">fsantini</maintainer>
    <license>TODO</license>

    <author email="fsantini@6river.com">Fabrizio Santini</author>
    <author email="chris@6river.com">Christopher Cacioppo</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>brain_msgs</build_depend>
    
    <run_depend>std_msgs</run_depend>
    <run_depend>brain_msgs</run_depend>
</package>