<?xml version="1.0"?>
<package>
    <name>ohps</name>
    <version>0.0.0</version>
    <description>The OHPS package</description>
    <maintainer email="fsantini@6river.com">fsantini</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend> 
  
    <build_depend>image_transport</build_depend>
    <run_depend>image_transport</run_depend>

    <build_depend>opencv2</build_depend>
    <run_depend>opencv2</run_depend>
</package>